<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weathergeneral.WeatherGeneralViewActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backgroundImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/main_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_container_view"
                tools:ignore="ImageContrastCheck" />

            <View
                android:id="@+id/top_container_view"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="#946EFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainActivityFourthHourTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_11pm"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/mainActivityFourthTemperatureTextView"
                app:layout_constraintStart_toStartOf="@+id/mainActivityFourthTemperatureTextView"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityFourthTemperatureTextView"
                tools:ignore="TextContrastCheck" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.26" />

            <TextView
                android:id="@+id/mainActivityTemperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"
                android:textSize="72sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_container_view"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/mainActivitySecondTemperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/mainActivityThirdTemperatureTextView"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <TextView
                android:id="@+id/mainActivityFourthTemperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityUVTextView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/mainActivitySunriseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/mainActivitySecondHourTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_1pm"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/mainActivitySecondTemperatureTextView"
                app:layout_constraintStart_toStartOf="@+id/mainActivitySecondTemperatureTextView"
                app:layout_constraintTop_toBottomOf="@+id/mainActivitySecondTemperatureTextView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04071247" />

            <TextView
                android:id="@+id/mainActivityVisibilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/mainActivityUVTextView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.74" />

            <TextView
                android:id="@+id/mainActivityDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityFeelingTextView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/mainActivityUVTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityHumidityTextView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/mainActivityFirstHourTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_8am"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/mainActivityFirstTemperatureTextView"
                app:layout_constraintStart_toStartOf="@+id/mainActivityFirstTemperatureTextView"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityFirstTemperatureTextView" />

            <ImageView
                android:id="@+id/mainActivityWeatherImageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/weather_icon_accessibility"
                android:src="@drawable/_02d"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_container_view"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/mainActivityThirdHourTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_5pm"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/mainActivityThirdTemperatureTextView"
                app:layout_constraintStart_toStartOf="@+id/mainActivityThirdTemperatureTextView"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityThirdTemperatureTextView" />

            <TextView
                android:id="@+id/mainActivityCityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/top_container_view" />

            <TextView
                android:id="@+id/mainActivityTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/top_container_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityCityTextView" />

            <TextView
                android:id="@+id/mainActivitySunsetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/mainActivityFirstTemperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/mainActivitySecondTemperatureTextView"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline7" />

            <TextView
                android:id="@+id/mainActivityHumidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityWindTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourlyWeatherRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="#33FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/mainActivitySunsetTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityFourthHourTextView" />

            <TextView
                android:id="@+id/mainActivityFeelingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"
                android:textSize="21sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityTemperatureTextView" />

            <TextView
                android:id="@+id/mainActivityThirdTemperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/mainActivityFourthTemperatureTextView"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/mainActivityWindTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityDescriptionTextView"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>